# cpp-study

./: .gitignore  README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: guessing_game.cpp
homework_2/igg_image/: CMakeLists.txt
homework_2/igg_image/data/: test.ascii.pgm
homework_2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  simple_test.cpp
homework_2/igg_image/tests/: CMakeLists.txt  test_image.cpp
single_file_practice/: first_algorithms.cpp  first_array.cpp  first_class.cpp  first_conditions.cpp  first_const.cpp  first_declare.cpp  first_function_default_parameter.cpp  first_function_overload.cpp  first_loops.cpp  first_namespaces.cpp  first_reference.cpp  first_segment_fault.cpp  first_skip_exit_loop.cpp  first_string.cpp  first_struct.cpp  first_test.cpp  first_vector.cpp  home_class.cpp  my_tools.cpp  my_tools.h  test_input_hw.cpp  test_maniac_things.cpp  test_random_things.cpp  use_tools.cpp
test_cmake/: CMakeLists.txt
test_cmake/include/: MultiVec.h  SumVec.h
test_cmake/src/: MultiVec.cpp  SumVec.cpp  main.cpp
test_cmake/tests/: CMakeLists.txt  test_SumVec.cpp
test_cmake_2/: CMakeLists.txt
test_cmake_2/src/: CMakeLists.txt  blah.cpp  hello.cpp  main.cpp
test_cmake_2/tests/: CMakeLists.txt  test_blah.cpp
